# django-forestadmin

./: .codeclimate.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.js  CHANGELOG.md  README.md  docker-compose.yml  manage.py  package.json  pytest.ini  requirements.txt  setup.cfg  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
django_forest/: __init__.py  apps.py  settings.py  test_dumb.py  urls.py
django_forest/actions/: urls.py
django_forest/actions/hooks/: urls.py
django_forest/actions/hooks/views/: __init__.py  change.py  load.py  utils.py
django_forest/actions/views/: __init__.py  values.py
django_forest/authentication/: apps.py  exception.py  urls.py  utils.py
django_forest/authentication/oidc/: client_manager.py  configuration_retriever.py  dynamic_client_registrator.py
django_forest/authentication/views/: __init__.py  callback.py  index.py  logout.py
django_forest/collections/fields/: factory.py  types.py  validations.py
django_forest/common/: types.py
django_forest/common/collections/fields/: factory.py  types.py  validations.py
django_forest/management/commands/: runserver.py
django_forest/middleware/: __init__.py  deactivate_count.py  ip_whitelist.py  permissions.py
django_forest/resources/: __init__.py  urls.py  utils.py
django_forest/resources/associations/: urls.py  utils.py
django_forest/resources/associations/utils/: __init__.py  association.py
django_forest/resources/associations/views/: __init__.py  count.py  csv.py  index.py  list.py
django_forest/resources/utils/: __init__.py  csv.py  date_filters.py  decorators.py  enhance_queryset.py  filters.py  format.py  in_search_fields.py  json_api_serializer.py  pagination.py  query_parameters.py  resource.py  search.py  smart_field.py
django_forest/resources/utils/queryset/: __init__.py  limit_fields.py  live_query_segment.py  scope.py  search.py  segment.py
django_forest/resources/utils/queryset/filters/: __init__.py  date.py  utils.py
django_forest/resources/utils/queryset/filters/date/: __init__.py  conditions.py  factory.py  utils.py
django_forest/resources/views/: __init__.py  count.py  csv.py  detail.py  index.py  list.py
django_forest/stats/: urls.py
django_forest/stats/utils/: __init__.py  stats.py
django_forest/stats/views/: __init__.py  detail.py  index.py  liveQueries.py  live_queries.py  statWithParameters.py  stats_with_parameters.py
django_forest/stats/views/live_queries/: __init__.py  utils.py
django_forest/stats/views/stats_with_parameters/: __init__.py  utils.py
django_forest/tests/: apps.py  models.py  settings.py  urls.py
django_forest/tests/actions/: urls.py
django_forest/tests/actions/hooks/views/: test_change.py  test_load.py
django_forest/tests/actions/views/: __init__.py  generate_invoice.py  mark_as_live.py  not_exists.py  send_invoice.py
django_forest/tests/authentication/: test_utils.py
django_forest/tests/authentication/oidc/: test_client_manager.py  test_configuration_retriever.py  test_dynamic_client_registrator.py
django_forest/tests/authentication/views/: test_callback.py  test_index.py  test_logout.py
django_forest/tests/collections/fields/: test_factory.py  test_types.py  test_validations.py
django_forest/tests/common/collections/fields/: test_factory.py  test_types.py  test_validations.py
django_forest/tests/fixtures/: article.json  choice.json  place.json  publication.json  question.json  restaurant.json  schema.py  serial.json  session.json  student.json
django_forest/tests/forest/: __init__.py  choice.py  place.py  question.py
django_forest/tests/middleware/: __init__.py  test_ip_whitelist.py  test_permissions.py
django_forest/tests/migrations/: 0001_initial.py  0002_auto_20210615_0942.py  0002_place_restaurant_waiter.py  0003_auto_20210701_1508.py  0003_student.py  0004_auto_20210603_0819.py  0004_serial.py  0005_alter_choice_question.py  0005_alter_serial_uuid.py  0006_auto_20210806_2254.py  0006_chessboard.py
django_forest/tests/resources/associations/views/: test_count.py  test_csv.py  test_list.py
django_forest/tests/resources/utils/queryset/filters/date/: test_factory.py  test_utils.py
django_forest/tests/resources/views/: test_count.py  test_csv.py  test_detail.py  test_list.py  test_list_filters.py  test_list_filters_date.py
django_forest/tests/resources/views/list/: test_list.py  test_list_filters.py  test_list_filters_date.py  test_list_live_query_segment.py  test_list_scope.py  test_list_search.py  test_list_smart_fields.py  test_list_smart_relationship.py  test_list_smart_segment.py  test_list_sort.py
django_forest/tests/stats/views/: test_live_queries.py  test_stats_with_parameters.py
django_forest/tests/types/: test_field.py
django_forest/tests/utils/: test_collection.py  test_cors.py  test_date.py  test_forest_api_requester.py  test_get_forest_setting.py  test_get_model.py  test_json_api_schema.py  test_json_api_serializer.py  test_middlewares.py  test_models.py  test_schema.py
django_forest/tests/views/: test_index.py  test_scope_cache_invalidation.py
django_forest/types/: fields.py
django_forest/utils/: __init__.py  apimap_errors.py  collection.py  cors.py  date.py  error_handler.py  forest_api_requester.py  forest_setting.py  get_model.py  get_type.py  ip_whitelist.py  json_api_serializer.py  middlewares.py  models.py  schema.py  scope.py  scope_validator.py  to_bool.py  type_mapping.py
django_forest/utils/actions/: view.py
django_forest/utils/permissions/: __init__.py  utils.py
django_forest/utils/schema/: __init__.py  apimap_errors.py  default.py  definitions.py  enums.py  json_api_schema.py  validations.py  version.py
django_forest/utils/views/: __init__.py  action.py  base.py
django_forest/views/: __init__.py  index.py  scope_cache_invalidation.py
