[metadata]
name = django-forestadmin
version = 1.0.5
description = The Django Liana for Forest Admin.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://forestadmin.com/
author = Guillaume Cisco
author_email = guillaumec@forestadmin.com
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2.0
    django-cors-headers >=3.7, <3.11 #3.11 remove the support of python3.6
    django-ipware>=4.0, < 5.0
    importlib-metadata>=4.10, <5.0;python_version<"3.8" #Add in the standard library in 3.8
    marshmallow-jsonapi>=0.24, <1.0
    oic>=1.3, <2.0
    python-dateutil==2.8.1
    python-jose==3.3.0
    requests==2.25.1
tests_require =
    coverage>=5.5, <6.0 #6.0 remove the support of python 3.6
    psycopg2>=2.9, <3.0
    pytest==6.2.4
    pytest-cov==2.12.0
    pytest-django==4.4.0
    pytest-mock==3.6.1
    pytest-pythonpath==0.7.3
    
