[metadata]
name = django-forestadmin
version = 1.5.1.dev
description = The Django Liana for Forest Admin.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://forestadmin.com/
author = Guillaume Cisco
author_email = guillaumec@forestadmin.com
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries

[options]
include_package_data = true
packages = find:
python_requires = >=3.8, <3.12
install_requires =
    Django >= 4.1, <5.0
    django-cors-headers >=3.14, <4.0 # 4.0 introduces (apparently) breaking changes
    django-ipware>=4.0, < 5.0
    marshmallow-jsonapi>=0.24, <1.0
    oic>=1.3, <2.0 # the max available python version is 3.9
    python-dateutil>=2.8, <3.0 # the max available python version is 3.9
    python-jose>=3.3, <4.0
    requests>=2.25, <3.0
    marshmallow>=3.14,<3.15 #3.15 remove the support of python3.6
    backports.zoneinfo>=0.2,<1.0;python_version<"3.9"
    pandas>=1.1,<=1.5
tests_require =
    coverage>=6.0.2
    psycopg2>=2.9, <3.0
    pytest>=6.2, <7
    pytest-cov>=3.0, <4.0
    pytest-django>=4.5, <5.0
    pytest-pythonpath>=0.7, <1.0
    tox>=3.24, < 4.0
    tox-pyenv>=1.1,<2.0
    pre-commit>=2.17,<3.0
    freezegun>=1.1, <2.0
