[metadata]
name = django-forestadmin
version = 1.6.8
description = The Django Liana for Forest Admin.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://forestadmin.com/
author = Guillaume Cisco
author_email = guillaumec@forestadmin.com
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries

[options]
include_package_data = true
packages = find:
python_requires = >=3.6, <3.12
install_requires =
    Django >= 3.2, <5.0
    django-cors-headers >=3.7 #, <3.11 #3.11 remove the support of python3.6 # let pip decide for this
    django-ipware>=4.0, < 5.0
    importlib-metadata>=4.0, <4.3;python_version<"3.8" #Add in the standard library in 3.8. Flake8 doesn't handle more than 4.3
    marshmallow-jsonapi>=0.24, <1.0
    oic>=1.3, <2.0 # the max available python version is 3.9
    python-dateutil>=2.8, <3.0 # the max available python version is 3.9
    python-jose>=3.3, <4.0
    requests>=2.25, <3.0
    marshmallow>=3.14  #,<3.15 #3.15 remove the support of python3.6 # let pip decide for this
    backports.zoneinfo>=0.2,<1.0;python_version<"3.9"
    pandas>=1.1,<=1.5
tests_require =
    coverage>=5.5  #, <6.0 #6.0 remove the support of python 3.6 # let pip decide for this
    psycopg2>=2.9, <3.0
    pytest>=6.2, <7
    pytest-cov>=3.0, <4.0
    pytest-django>=4.5, <5.0
    pytest-pythonpath>=0.7, <1.0
    tox>=3.24, < 4.0
    tox-pyenv>=1.1,<2.0
    pre-commit>=2.17,<3.0
    freezegun>=1.1, <2.0
